// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/splitter/demo/collapsible.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
    style="box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); height: 200px;"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
  <div
    class="g-splitter g-splitter-vertical css-var-test-id g-splitter-css-var"
    style="box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); height: 300px;"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/collapsible.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/collapsibleIcon.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-vertical"
  style="gap: 20px;"
>
  <div
    class="g-flex css-var-test-id"
    style="gap: 5px;"
  >
    <p>
      ShowCollapsibleIcon: 
    </p>
    <div
      class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
      role="radiogroup"
    >
      <label
        class="g-radio-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio g-wave-target"
        >
          <input
            class="g-radio-input"
            name="test-id"
            type="radio"
            value="auto"
          />
        </span>
        <span
          class="g-radio-label"
        >
          Auto
        </span>
      </label>
      <label
        class="g-radio-wrapper g-radio-wrapper-checked css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio g-wave-target g-radio-checked"
        >
          <input
            checked=""
            class="g-radio-input"
            name="test-id"
            type="radio"
            value="true"
          />
        </span>
        <span
          class="g-radio-label"
        >
          True
        </span>
      </label>
      <label
        class="g-radio-wrapper css-var-test-id g-radio-css-var"
      >
        <span
          class="g-radio g-wave-target"
        >
          <input
            class="g-radio-input"
            name="test-id"
            type="radio"
            value="false"
          />
        </span>
        <span
          class="g-radio-label"
        >
          False
        </span>
      </label>
    </div>
  </div>
  <div
    class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="33"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Second
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="67"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Third
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/collapsibleIcon.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/control.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: 50%; flex-grow: 0;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: 50%; flex-grow: 0;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-justify-space-between g-flex-gap-medium"
  >
    <button
      aria-checked="true"
      class="g-switch css-var-test-id g-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="g-switch-handle"
      />
      <span
        class="g-switch-inner"
      >
        <span
          class="g-switch-inner-checked"
        >
          Enabled
        </span>
        <span
          class="g-switch-inner-unchecked"
        >
          Disabled
        </span>
      </span>
    </button>
    <button
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      type="button"
    >
      <span>
        Reset
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/splitter/demo/control.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/customize.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: 40%; flex-grow: 0;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="40"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled g-splitter-bar-dragger-customize"
      >
        <div
          class="g-splitter-bar-dragger-icon"
        >
          <span
            aria-label="column-width"
            class="gicon gicon-column-width acss-jp9u09"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="column-width"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M180 176h-60c-4.4 0-8 3.6-8 8v656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V184c0-4.4-3.6-8-8-8zm724 0h-60c-4.4 0-8 3.6-8 8v656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V184c0-4.4-3.6-8-8-8zM785.3 504.3L657.7 403.6a7.23 7.23 0 00-11.7 5.7V476H378v-62.8c0-6-7-9.4-11.7-5.7L238.7 508.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h268v62.8c0 6 7 9.4 11.7 5.7l127.5-100.8c3.8-2.9 3.8-8.5.2-11.4z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 2
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="70"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled g-splitter-bar-dragger-customize"
      >
        <div
          class="g-splitter-bar-dragger-icon"
        >
          <span
            aria-label="column-width"
            class="gicon gicon-column-width acss-jp9u09"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="column-width"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M180 176h-60c-4.4 0-8 3.6-8 8v656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V184c0-4.4-3.6-8-8-8zm724 0h-60c-4.4 0-8 3.6-8 8v656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V184c0-4.4-3.6-8-8-8zM785.3 504.3L657.7 403.6a7.23 7.23 0 00-11.7 5.7V476H378v-62.8c0-6-7-9.4-11.7-5.7L238.7 508.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h268v62.8c0 6 7 9.4 11.7 5.7l127.5-100.8c3.8-2.9 3.8-8.5.2-11.4z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 3
        </h5>
      </div>
    </div>
  </div>,
  <div
    class="g-divider css-var-test-id g-divider-horizontal g-divider-rail"
    role="separator"
  />,
  <div
    class="g-splitter g-splitter-vertical css-var-test-id g-splitter-css-var"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: 40%; flex-grow: 0;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="40"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled g-splitter-bar-dragger-customize acss-13lz4mh"
      >
        <div
          class="g-splitter-bar-dragger-icon"
        />
      </div>
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Second
        </h5>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/splitter/demo/customize.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/debug.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <h3
    class="g-typography css-var-test-id"
  >
    [true, 0, false]
  </h3>
  <div
    class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger"
      />
    </div>
    <div
      class="g-splitter-panel g-splitter-panel-hidden"
      style="flex-basis: 0px; flex-grow: 0;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 2
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 3
        </h5>
      </div>
    </div>
  </div>
  <h3
    class="g-typography css-var-test-id"
  >
    [false, 0, true]
  </h3>
  <div
    class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="g-splitter-panel g-splitter-panel-hidden"
      style="flex-basis: 0px; flex-grow: 0;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 2
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 3
        </h5>
      </div>
    </div>
  </div>
  <h3
    class="g-typography css-var-test-id"
  >
    Start have min & max
  </h3>
  <div
    class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 2
        </h5>
      </div>
    </div>
  </div>
  <h3
    class="g-typography css-var-test-id"
  >
    End have min & max
  </h3>
  <div
    class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Panel 2
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/debug.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/group.tsx extend context correctly 1`] = `
<div
  class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
  style="height: 300px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
>
  <div
    class="g-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        Left
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="50"
    class="g-splitter-bar"
    role="separator"
  >
    <div
      class="g-splitter-bar-dragger"
    />
  </div>
  <div
    class="g-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="g-splitter g-splitter-vertical css-var-test-id g-splitter-css-var"
    >
      <div
        class="g-splitter-panel"
        style="flex-basis: auto; flex-grow: 1;"
      >
        <div
          class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="g-typography g-typography-secondary css-var-test-id"
            style="white-space: nowrap;"
          >
            Top
          </h5>
        </div>
      </div>
      <div
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="50"
        class="g-splitter-bar"
        role="separator"
      >
        <div
          class="g-splitter-bar-dragger"
        />
      </div>
      <div
        class="g-splitter-panel"
        style="flex-basis: auto; flex-grow: 1;"
      >
        <div
          class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="g-typography g-typography-secondary css-var-test-id"
            style="white-space: nowrap;"
          >
            Bottom
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/group.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/lazy.tsx extend context correctly 1`] = `
<div
  class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  style="width: 100%;"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
      style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
    >
      <div
        class="g-splitter-panel"
        style="flex-basis: 40%; flex-grow: 0;"
      >
        <div
          class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="g-typography g-typography-secondary css-var-test-id"
            style="white-space: nowrap;"
          >
            First
          </h5>
        </div>
      </div>
      <div
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="40"
        class="g-splitter-bar"
        role="separator"
      >
        <div
          class="g-splitter-bar-preview"
          style="--g-splitter-bar-preview-offset: 0px;"
        />
        <div
          class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
        />
      </div>
      <div
        class="g-splitter-panel"
        style="flex-basis: auto; flex-grow: 1;"
      >
        <div
          class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="g-typography g-typography-secondary css-var-test-id"
            style="white-space: nowrap;"
          >
            Second
          </h5>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-splitter g-splitter-vertical css-var-test-id g-splitter-css-var"
      style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
    >
      <div
        class="g-splitter-panel"
        style="flex-basis: 40%; flex-grow: 0;"
      >
        <div
          class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="g-typography g-typography-secondary css-var-test-id"
            style="white-space: nowrap;"
          >
            First
          </h5>
        </div>
      </div>
      <div
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="40"
        class="g-splitter-bar"
        role="separator"
      >
        <div
          class="g-splitter-bar-preview"
          style="--g-splitter-bar-preview-offset: 0px;"
        />
        <div
          class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
        />
      </div>
      <div
        class="g-splitter-panel"
        style="flex-basis: auto; flex-grow: 1;"
      >
        <div
          class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="g-typography g-typography-secondary css-var-test-id"
            style="white-space: nowrap;"
          >
            Second
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/lazy.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/multiple.tsx extend context correctly 1`] = `
<div
  class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
  style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
>
  <div
    class="g-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        Panel 1
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="33"
    class="g-splitter-bar"
    role="separator"
  >
    <div
      class="g-splitter-bar-dragger"
    />
  </div>
  <div
    class="g-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        Panel 2
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="67"
    class="g-splitter-bar"
    role="separator"
  >
    <div
      class="g-splitter-bar-dragger"
    />
  </div>
  <div
    class="g-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        Panel 3
      </h5>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/multiple.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/nested-in-tabs.tsx extend context correctly 1`] = `
<div
  class="g-tabs g-tabs-top css-var-test-id g-tabs-css-var"
>
  <div
    aria-orientation="horizontal"
    class="g-tabs-nav"
    role="tablist"
  >
    <div
      class="g-tabs-nav-wrap"
    >
      <div
        class="g-tabs-nav-list"
        style="transform: translate(0px, 0px);"
      >
        <div
          class="g-tabs-tab g-tabs-tab-active"
          data-node-key="1"
        >
          <div
            aria-controls="rc-tabs-test-panel-1"
            aria-selected="true"
            class="g-tabs-tab-btn"
            id="rc-tabs-test-tab-1"
            role="tab"
            tabindex="0"
          >
            General
          </div>
        </div>
        <div
          class="g-tabs-tab"
          data-node-key="2"
        >
          <div
            aria-controls="rc-tabs-test-panel-2"
            aria-selected="false"
            class="g-tabs-tab-btn"
            id="rc-tabs-test-tab-2"
            role="tab"
            tabindex="-1"
          >
            Splitter Tab
          </div>
        </div>
        <div
          class="g-tabs-ink-bar g-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="g-tabs-nav-operations g-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="rc-tabs-test-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        class="g-tabs-nav-more"
        id="rc-tabs-test-more"
        style="visibility: hidden; order: 1;"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="gicon gicon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div
        class="g-tabs-dropdown g-slide-up-appear g-slide-up-appear-prepare g-slide-up css-var-test-id g-tabs-css-var g-tabs-dropdown-placement-bottomLeft"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <ul
          aria-label="expanded dropdown"
          class="g-tabs-dropdown-menu g-tabs-dropdown-menu-root g-tabs-dropdown-menu-vertical"
          data-menu-list="true"
          id="rc-tabs-test-more-popup"
          role="listbox"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
    </div>
  </div>
  <div
    class="g-tabs-content-holder"
  >
    <div
      class="g-tabs-content g-tabs-content-top"
    >
      <div
        aria-hidden="false"
        aria-labelledby="rc-tabs-test-tab-1"
        class="g-tabs-tabpane g-tabs-tabpane-active"
        id="rc-tabs-test-panel-1"
        role="tabpanel"
        tabindex="0"
      >
        Content of Tab Pane 1
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/nested-in-tabs.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/reset.tsx extend context correctly 1`] = `
<div
  class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
  style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
>
  <div
    class="g-splitter-panel"
    style="flex-basis: 30%; flex-grow: 0;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        Panel 1
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="30"
    class="g-splitter-bar"
    role="separator"
  >
    <div
      class="g-splitter-bar-dragger"
    />
  </div>
  <div
    class="g-splitter-panel"
    style="flex-basis: 40%; flex-grow: 0;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        Panel 2
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="70"
    class="g-splitter-bar"
    role="separator"
  >
    <div
      class="g-splitter-bar-dragger"
    />
  </div>
  <div
    class="g-splitter-panel"
    style="flex-basis: 30%; flex-grow: 0;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        Panel 3
      </h5>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/reset.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/size.tsx extend context correctly 1`] = `
<div
  class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
  style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
>
  <div
    class="g-splitter-panel"
    style="flex-basis: 40%; flex-grow: 0;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        First
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="40"
    class="g-splitter-bar"
    role="separator"
  >
    <div
      class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
    />
  </div>
  <div
    class="g-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        Second
      </h5>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/size.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/size-mix.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-radio-group g-radio-group-outline css-var-test-id g-radio-css-var"
    role="radiogroup"
    style="margin-bottom: 16px;"
  >
    <label
      class="g-radio-button-wrapper g-radio-button-wrapper-checked css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button g-radio-button-checked"
      >
        <input
          checked=""
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="1"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Size Bucket 1
      </span>
    </label>
    <label
      class="g-radio-button-wrapper css-var-test-id g-radio-css-var"
    >
      <span
        class="g-radio-button"
      >
        <input
          class="g-radio-button-input"
          name="test-id"
          type="radio"
          value="2"
        />
      </span>
      <span
        class="g-radio-button-label"
      >
        Size Bucket 2
      </span>
    </label>
  </div>,
  <div
    class="g-splitter g-splitter-horizontal css-var-test-id g-splitter-css-var"
    style="height: 300px; width: 1000px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: 100px; flex-grow: 0;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Second
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="9980"
      aria-valuemin="0"
      aria-valuenow="0"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger g-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="white-space: nowrap;"
        >
          Third
        </h5>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/splitter/demo/size-mix.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-large g-flex-vertical"
>
  <div
    class="g-splitter g-splitter-horizontal acss-3vbbjp css-var-test-id g-splitter-css-var"
    style="background-color: rgb(255, 251, 230); height: 200px;"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="color: rgb(0, 0, 0);"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger"
        style="background-color: rgba(194, 223, 252, 0.4);"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
          style="color: rgb(0, 0, 0);"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
  <div
    class="g-splitter g-splitter-horizontal acss-3vbbjp css-var-test-id g-splitter-css-var"
    style="border-width: 2px; border-style: dashed; margin-bottom: 10px; height: 200px;"
  >
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="g-splitter-bar"
      role="separator"
    >
      <div
        class="g-splitter-bar-dragger"
      />
    </div>
    <div
      class="g-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="g-typography g-typography-secondary css-var-test-id"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/style-class.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/vertical.tsx extend context correctly 1`] = `
<div
  class="g-splitter g-splitter-vertical css-var-test-id g-splitter-css-var"
  style="height: 300px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
>
  <div
    class="g-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        First
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="50"
    class="g-splitter-bar"
    role="separator"
  >
    <div
      class="g-splitter-bar-dragger"
    />
  </div>
  <div
    class="g-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="g-typography g-typography-secondary css-var-test-id"
        style="white-space: nowrap;"
      >
        Second
      </h5>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/vertical.tsx extend context correctly 2`] = `[]`;
